added buttons and tried animating them

--- a/contacts.html
+++ b/contacts.html
@@ -13,20 +13,50 @@
             <div id="lowerCon">
                 <div class="botCon">
                     <div class="info">
+                        <button id="first" class="button">
+                            <span>
+                                <img src="images/email.png">
+                            </span>
+                        </button>
                     </div>
                     <div class="info">
+                        <button id="second" class="button">
+                            <span>
+                                <img src="images/phone.png">
+                            </span>
+                        </button>
                     </div>
                 </div>
                 <div class="botCon">
-                    <div class="info">
+                    <div class="info stuck">
+                        <button id="third" class="button">
+                            <span>
+                                <img src="images/cphone.png">
+                            </span>
+                        </button>
                     </div>
-                    <div class="info"> 
+                    <div class="info">
+                        <button id="fourth" class="button">
+                            <span>
+                                <img src="images/fb.png">
+                            </span>
+                        </button>
                     </div>
                 </div>
                 <div class="botCon">
-                    <div class="info">
+                    <div class="info stuck">
+                        <button id="fifth" class="button">
+                            <span>
+                                <img src="images/gmail.png">
+                            </span>
+                        </button>
                     </div>
                     <div class="info">
+                        <button id="sixth" class="button">
+                            <span>
+                                <img src="images/burger.png">
+                            </span>
+                        </button>
                     </div>
                 </div>
             </div>
